---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      ORDER BY id
      LIMIT 10 OFFSET 20;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  17   0                     0  Start at 17
   1  Integer         10   4   0                     0  r[4]=10; LIMIT counter
   2  Integer         20   5   0                     0  r[5]=20
   3  MustBeInt        5   0   0                     0  ; OFFSET counter
   4  OffsetLimit      4   6   5                     0  if r[4]>0 then r[6]=r[4]+max(0,r[5]) else r[6]=(-1); OFFSET + LIMIT
   5  IfNot            4  16   0                     0  if !r[4] goto 16
   6  OpenRead         0   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   7  Rewind           0  16   0                     0  Rewind table products
   8    IfPos          5  15   1                     0  r[5]>0 -> r[5]-=1, goto 15
   9    RowId          0   1   0                     0  r[1]=products.rowid
  10    Column         0   1   2                     0  r[2]=products.name
  11    Column         0   2   3                     0  r[3]=products.price
  12    RealAffinity   3   0   0                     0
  13    ResultRow      1   3   0                     0  output=r[1..3]
  14    DecrJumpZero   4  16   0                     0  if (--r[4]==0) goto 16
  15  Next             0   8   0                     0
  16  Halt             0   0   0                     0
  17  Transaction      0   1   7                     0  iDb=0 tx_mode=Read
  18  Goto             0   1   0                     0
